edited files and debugged

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                                 <a href="contact.html" class="hvr-sweep-to-bottom"><i class="fa fa-comment-o" aria-hidden="true"></i><span>Contact</span></a>
                             </li>
                             <li class="col-6 col-sm-3 list-inline-item ui-menu-color-download menuitem">
-                                <a href="assets/cv/sample-cv.pdf" target="_blank" class="hvr-sweep-to-bottom"><i class="fa fa-download" aria-hidden="true"></i><span>Download CV</span></a>
+                                <a href="assets/cv/my-cv.pdf" target="_blank" class="hvr-sweep-to-bottom"><i class="fa fa-download" aria-hidden="true"></i><span>Download CV</span></a>
                             </li>
                         </ul>
                     </div>
@@ -60,7 +60,7 @@
                     </div>
                     <div class="value">
                         <p>
-                            Rosie Odenkirk
+                            Zainab Ismail
                         </p>
                     </div>
                 </div>
@@ -72,7 +72,7 @@
                     </div>
                     <div class="value">
                         <p>
-                            17 Riverdale, Catskills, NY USA
+                            85 Bracken Lane, Southampton, SO16 6BA
                         </p>
                     </div>
                 </div>
@@ -84,7 +84,7 @@
                     </div>
                     <div class="value">
                         <p>
-                            555 204 1973
+                            07804635760
                         </p>
                     </div>
                 </div>
@@ -96,7 +96,7 @@
                     </div>
                     <div class="value">
                         <p>
-                            rosie.odenkirk@hansaw.com
+                            zinabsamater@hotmail.co.uk
                         </p>
                     </div>
                 </div>
@@ -164,7 +164,7 @@
                 <h5 class="uppercase general-sub">Download</h5>
                 <p class="inline-block">
                     Need a printable version of my CV? Download it here.
-                    <a href="assets/cv/sample-cv.pdf" target="_blank" class="cv-pdf">
+                    <a href="assets/cv/my-cv.pdf" target="_blank" class="cv-pdf">
                         <i class="fa fa-download" aria-hidden="true"></i>
                         <span class="sr-only">Download link.</span>
                     </a>
