--- a/resume.html
+++ b/resume.html
@@ -34,7 +34,7 @@
                                 <a href="contact.html" class="hvr-sweep-to-bottom"><i class="fa fa-comment-o" aria-hidden="true"></i><span>Contact</span></a>
                             </li>
                             <li class="col-6 col-sm-3 list-inline-item ui-menu-color-download menuitem">
-                                <a href="assets/cv/sample-cv.pdf" target="_blank" class="hvr-sweep-to-bottom"><i class="fa fa-download" aria-hidden="true"></i><span>Download CV</span></a>
+                                <a href="./assets/cv/sample-cv.pdf" target="_blank" class="hvr-sweep-to-bottom"><i class="fa fa-download" aria-hidden="true"></i><span>Download CV</span></a>
                             </li>
                         </ul>
                     </div>
@@ -48,26 +48,26 @@
                 <div class="row">
                     <div class="col-12">
                         <h3 class="history-heading uppercase">
-                            Work History
+                            Education
                         </h3>
                     </div>
                 </div>
                 <div class="history-items">
-                    <div class="timeline-item" data-dates="02/1998 - 04/2004">
-                        <h4>National College of Art and Design (NCAD)</h4>
-                        <p>Sculptor in residence</p>
+                    <div class="timeline-item" data-dates="09/2006 - 07/2008">
+                        <h4>Eastleigh College</h4>
+                        <p>BTEC - National Diploma in Art & Design</p>
                     </div>
-                    <div class="timeline-item" data-dates="04/2004 - 06/2008">
-                        <h4>Fisher and Diaz Funeral Directors</h4>
-                        <p>Junior Embalmer</p>
+                    <div class="timeline-item" data-dates="09/2009 - 06/2012">
+                        <h4>Winchester School of Arts</h4>
+                        <p>BA Graphic Design</p>
                     </div>
-                    <div class="timeline-item" data-dates="06/2008 - 06/2011">
-                        <h4>Phantom Design Inc. Dublin</h4>
-                        <p>Junior Front End Developer</p>
+                    <div class="timeline-item" data-dates="09/2015 - 06/2018">
+                        <h4>The Open University</h4>
+                        <p>BSc Healthcare and Health Science</p>
                     </div>
-                    <div class="timeline-item" data-dates="06/2011 - Present">
-                        <h4>Hooli Inc. Silicon Valley</h4>
-                        <p>Full Stack Web Developer</p>
+                    <div class="timeline-item" data-dates="04/2023 - Present">
+                        <h4>Code Institute</h4>
+                        <p>Level 5 - Diploma in Web Development</p>
                     </div>
                 </div>
             </div>
@@ -86,7 +86,7 @@
                             <div class="col-10">
                                 <h4 class="three-reasons-heading uppercase">Front End</h4>
                                 <p>
-                                    I'm skilled in User Experience Design using the trinity of HTML/CSS/Javascript. I also have extensive experience in Front End Frameworks such as Angular and React
+                                    I'm skilled in User Experience Design using the trinity of HTML/CSS/Javascript. I also have extensive experience in Front End Frameworks such as React and proficient in Figma
                                 </p>
                             </div>
                         </div>
@@ -99,7 +99,7 @@
                             <div class="col-10">
                                 <h4 class="three-reasons-heading uppercase">Back End</h4>
                                 <p>
-                                    I specialize in data-driven web applications. Many of my projects utilise document-based data. I use Python and Django in conjunction with MongoDB to process and present information.
+                                    I specialize in data-driven web applications. Many of my projects utilise document-based data. I use Python and Django in conjunction with MySQL to process and present information.
                                 </p>
                             </div>
                         </div>
@@ -108,16 +108,16 @@
                 <div class="row progress-section">
                     <div class="col">
                         <div class="progress">
-                            <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width:90%;">
-                                <span class="sr-only">90% complete</span>
+                            <div class="progress-bar" role="progressbar" aria-valuenow="91" aria-valuemin="0" aria-valuemax="100" style="width:91%;">
+                                <span class="sr-only">91% complete</span>
                             </div>
                             <span class="progress-type">HTML / HTML5</span>
                         </div>
                         <div class="progress">
-                            <div class="progress-bar bg-success" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:80%;">
-                                <span class="sr-only">80% complete</span>
+                            <div class="progress-bar bg-success" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width:90%;">
+                                <span class="sr-only">90% complete</span>
                             </div>
-                            <span class="progress-type">CSS / CSS3</span>
+                            <span class="progress-type">CSS / CSS5</span>
                         </div>
                         <div class="progress">
                             <div class="progress-bar bg-info" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:70%;">
@@ -166,12 +166,6 @@
                 <ul class="list-inline social-links">
                     <li class="list-inline-item">
                         <a target="_blank" href="#">
-                            <i class="fa fa-facebook" aria-hidden="true"></i>
-                            <span class="sr-only">Facebook</span>
-                        </a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a target="_blank" href="#">
                             <i class="fa fa-twitter" aria-hidden="true"></i>
                             <span class="sr-only">Twitter</span>
                         </a>
@@ -184,20 +178,8 @@
                     </li>
                     <li class="list-inline-item">
                         <a target="_blank" href="#">
-                            <i class="fa fa-pinterest" aria-hidden="true"></i>
-                            <span class="sr-only">Pinterest</span>
-                        </a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a target="_blank" href="#">
                             <i class="fa fa-instagram" aria-hidden="true"></i>
                             <span class="sr-only">Instagram</span>
-                        </a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a target="_blank" href="#">
-                            <i class="fa fa-youtube" aria-hidden="true"></i>
-                            <span class="sr-only">YouTube</span>
                         </a>
                     </li>
                 </ul>
